force-app/main/default/objects/Lead/fields/Car_registration_nr__c.field-meta.xml
<CustomField>
    <fullName>Car_registration_nr__c</fullName>
    <label>Car registration nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>