force-app/main/default/objects/Lead/fields/Conversion_Point__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Point__c</fullName>
    <label>Conversion Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>