force-app/main/default/objects/Lead/fields/Discarded_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discarded_Reason__c</fullName>
    <label>Discarded Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not qualified</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>